# gnome-mines-ai

./: CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  meson.build  setup.sh
data/: org.gnome.Mines.gschema.xml
src/: ai-benchmark-dialog.vala  ai-commentary-overlay.vala  ai-preferences-dialog.vala  gnome-mines.vala  interface.ui  meson.build  minefield.vala  style.css
src/ai/: ai-benchmark.vala  ai-debug-logger.vala  ai-manager.vala  ai-prompt.vala  ai-settings-file.vala  api-key-validator.vala  llm-provider.vala
