resources = gnome.compile_resources ('resources', 'gnome-mines.gresource.xml',
                                     source_dir: '.',
                                     c_name: 'resources')

gnome_mines = executable ('gnome-mines',
                          [ 'config.vapi',
                            'window.vala',
                            'gnome-mines.vala',
                            'minefield.vala',
                            'minefield-view.vala',
                            'tile.vala',
                            'theme-selector-dialog.vala',
                            'ai-preferences-dialog.vala',
                            'ai-commentary-overlay.vala',
                            'ai/ai-manager.vala',
                            'ai/ai-prompt.vala',
                            'ai/llm-provider.vala',
                            'ai/api-key-validator.vala',
                            'ai/ai-debug-logger.vala',
                            'ai/ai-settings-file.vala',
                            'ai/ai-benchmark.vala',
                            'ai-benchmark-dialog.vala'] + resources,
                          dependencies: [ glib_dep,
                                          adw_dep,
                                          gtk_dep,
                                          librsvg_dep,
                                          libmath_dep,
                                          libgnome_games_support_dep,
                                          libsoup_3_dep,
                                          json_glib_dep,
                                          gee_dep ],
                          vala_args: [ '--pkg=posix', '--pkg=gee-0.8' ],
                          c_args: [ '-DVERSION="@0@"'.format (meson.project_version ()),
                                    '-DGETTEXT_PACKAGE="gnome-mines"',
                                    '-DLOCALEDIR="@0@"'.format (localedir),
                                    '-DDATA_DIRECTORY="@0@"'.format (pkgdatadir) ],
                          install: true )
